<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.gmail.ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconGoogle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/google_icon"
        app:layout_constraintBottom_toTopOf="@+id/signIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/googleText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconGoogle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/googleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/google_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/borderline_edit_text"
        android:hint="@string/email_or_phone"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/forgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="200dp"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_700"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintBottom_toTopOf="@+id/textForLearnMore"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textForLearnMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgotEmail"
        app:layout_constraintLeft_toLeftOf="@+id/forgotEmail"
        app:layout_constraintRight_toRightOf="@+id/forgotEmail"
        android:layout_marginTop="20dp"
        android:text="@string/text_for_learn_more"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toTopOf="@+id/createAccount"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textForLearnMore"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/textForLearnMore"
        app:layout_constraintRight_toRightOf="@+id/textForLearnMore"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="210dp"
        android:text="@string/create_account"
        android:textColor="@color/purple_700"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textForLearnMore"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toRightOf="@+id/createAccount"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="250dp"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:text="@string/button_next"
        android:textStyle="italic"
        android:layout_marginEnd="25dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iconGoogle,signIn,googleText,email,forgotEmail,textForLearnMore,createAccount,loginButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>