<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.registration.phonenumber.PhoneNumberFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconGoogle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/google_icon"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconGoogle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phoneNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/add_number_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/enterPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/enterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberText"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberCode"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints,NotSibling">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countyCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borderline_edit_text"
            app:ccp_defaultNameCode="AM" />

        <EditText
            android:id="@+id/phoneNumberCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/borderline_edit_text"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:padding="10dp"
            android:inputType="phone"
            android:textColorHint="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/numberPublicText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/note_for_number"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhone"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/notePhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonPhoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPublicText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:background="@color/purple_700"
        android:text="@string/button_next"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notePhoneNumber"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iconGoogle,phoneNumber,phoneNumberText,enterPhone,numberPublicText,notePhoneNumber,buttonPhoneNumber" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>
